# llm-mafia

./: .env.sample  .gitignore  AGENT.md  AGENTS.md  README.en.md  README.ko.md  README.md  config.yaml  main.py  plan.md  pyproject.toml  streamlit_app.py
.sisyphus/: ralph-loop.local.md
.sisyphus/drafts/: agent-role-inference-voting.md
app/agents/: base.py  llm_agent.py  personas.py
app/engine/: phase.py  rules.py  vote.py
app/io/: config.py  event_log.py
app/metrics/: collector.py  report.py
app/providers/: model_registry.py  openrouter_client.py
app/runner/: single_match.py  speech_queue.py  tournament.py
docs/: rule.md
src/: config.py  streamlit_app.py
src/agents/: base.py  llm_agent.py
src/agents/prompt/: day_vote.txt  followup_request.txt  persona_citizen.txt  persona_doctor.txt  persona_mafia.txt  persona_police.txt  personas.py  speak_request.txt
src/engine/: game_state.py  phase.py  rules.py  vote.py
src/io/: config.py  event_log.py
src/metrics/: collector.py
src/providers/: model_registry.py  openrouter_client.py
src/runner/: graph_runner.py  match_runner.py  single_match.py  tournament.py
tests/: test_agent_memory.py  test_day_speech_prompt.py  test_day_vote.py  test_graph_runner.py  test_history_visibility.py  test_mafia_consensus.py  test_openrouter_client.py  test_role_inference_phase_split.py
